2008-03-29  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldghemical.cpp,
	src/forcefields/forcefielduff.cpp,
	src/forcefields/forcefieldmmff94.cpp: Don't use Cut-off when disabled.

2008-03-29  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Implement
	methods to handle cut-offs. Added SetLineSearchType().

	* src/forcefields/forcefieldghemical.*, src/forcefields/forcefielduff.*,
	src/forcefields/forcefieldmmff94.*: Use it.
	
	* tools/obminimize.cpp: Add new options to specify cut-off and linesearch.

2008-03-29 Chris Morley

	* src/formats/inchiformat.cpp: Add output options 
	"include fixed hydrogen layer" and "include bonds to metal"
	as shortcuts to NIST's InChI functionality.
	
	* include/openbabel/obconversion.h: Make default to OUTOPTIONS,
	as IsOptions does. Makes setting most options less cumbersome.


2008-03-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/UFF.prm: Improved N sp, sp2 atom typing, suggested by Bob Hanson.

	* src/forcefields/forcefielduff.*: Many bug fixes for angle and
	torsion terms, suggested by Bob Hanson (via Jmol implementation).

	* test/files/uffresults.txt: Updated for above changes.

	* configure, configure.in, */Makefile.in: Bump to 2.2.0b5 and
	update build files.

2008-03-27  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* test/files/uffresults.txt: Update UFF results for recent bug fixes.

2008-03-27  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Always call SetCoordinates in Setup.

2008-03-27  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Working
	Newton2NumLineSearch. Used only for SteepestDescent at the moment.

2008-03-26 Chris Morley

	* include/openbabel/parsmart.h, src/parsmart.cpp:
	Fix bug #1906462. If SMARTS pattern contains [H], the matching
	now is done on n explicit hydrogen copy of the molecules. Extra bool